--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,14 @@
-Package: toolkit
-Title: What the Package Does (one line, title case)
+Package: htester
+Title: A data.frame approach to hypothesis testing
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person(c("Ronald", "E."), "Robertson",, "rrobertson@aibrt.org", c("cre", "aut")),
+Description: R's htest (hypothesis testing) functions (e.g. t.test, wilcox.test, cor.test, etc.)
+    are essential for conducting research, but offer output in a clunky list format that displays well
+    in the console but makes comparisons an exercise in visual gymnastics and exporting results complicated.
+    This package takes these htest lists as input, flattens them, and returns a data.frame where comparisons
+    can quickly be made and results can easily be exported.
 Depends:
     R (>= 3.2.3)
-License: What license is it under?
+License: GPL-3
 LazyData: true
 RoxygenNote: 5.0.1
