--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: htester
-Title: A data.frame approach to hypothesis testing results
+Title: Convert HTest Results to Data.Frames
 Version: 0.0.0.9000
 Authors@R: person(c("Ronald", "E."), "Robertson",, "rrobertson@aibrt.org", c("cre", "aut"))
 Description: R's htest (hypothesis testing) functions (e.g. t.test, wilcox.test, cor.test, etc.)
